修改支付接口

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 	<name>WeixinV3</name>
 
 	<js-module src="www/weixin.js" name="weixin">
-		<clobbers target="navigator.weixin" />
+		<clobbers target="Wxpay" />
 	</js-module>
 
 	<!-- ios -->
